lab1/Test/L1-A-11-82.cmm
float ;
int PQ066ftDjsGx ( ) {
  struct eU {
    struct G6mlb jDe0NOex_u ;
    int Nt15xtjc ;
  }H2LahJvW [ 262353750 ] = d6U2kJACpRwfK || I0GUuXOSsE2W 
    <= - ! w [ ELKY9dpbuu6lRrumb = zfgDIk_5HN3rkCP && 
    Ag4gCaiHV3YarLO84tw - Y1 ( vyJcsAzSSIi , S_8eK3iq6 
    < ApIw9Q6hLMdG75JF + yoOnWz5IK * Vx4ANxGv1hTTlrTPT 
    [ lkk3rUDqxu && B6Qtg != Ind - eRU9j0HYrsQwoh ( zZZ 
    == nE * ! ( rQSE2 ) . gNpJA > oRi_ ) >= ! 1574980957 
    ] ) ] / ! ! 1716241752.541388758 * ! - fza9g ( ) . 
    dcJAKA801dBLw10jra , rbseDiYtr7yMnEYI3 
}
struct HSOsfUyV0jh liigmkzP8z 
;
int sdKTp , _EOndQ3pg5BGHPh 

;
int KN1LNrL ( int KtaBWco , int LbL9CF5F1qgd5Fu ) 
  {
}
struct {
  int xHdIO ;
  int MlxEVbh6uBWbxqyG ;
}FShERsxtJOoV5E ( int K6RO9 ) {
  if ( = nqo )   if ( dpNjzi )   if ( jqEoz5K0ceI0OGKzvn 
    ) {
  }else   while ( a )   while ( jYLf1sDE9CBzstGvy 
    )   Ak89ZnSy5YvmL7 ;



else   while ( JX ) {
    kXX3B5Qe ;
    if ( uswr1XdsU2rTeSW0BE4 )     ZFHIjMo2Epd_fRVlvuUv 
      ;
else     if ( QZOyh9e2XCsmGV )     return fceIDPOpYgctvKOUu 
      ;


<   }


}
+ XpfDyDZ9Qif7 